# social_network

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
postman_collection/: ScialApp.postman_environment.json  Social App.postman_collection.json
social_network/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
